Create MySQL DB schema, add register feature

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -74,6 +74,11 @@
             <span>Error</span>
           </li>
 
+          <li th:replace="::menuItem ('/user/register.html','register','register','user','Register')">
+            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+            <span>Register</span>
+          </li>
+
         </ul>
       </div>
     </div>
